fix z-index.

--- a/src/components/global/Header/Header.scss
+++ b/src/components/global/Header/Header.scss
@@ -90,6 +90,7 @@
         pointer-events: all;
         justify-content: flex-end;
         position: unset;
+        z-index: unset;
     }
 
     &.active {
@@ -100,13 +101,21 @@
     }
 
     &__list {
-        margin-top: 6rem;
+        margin-top: 8rem;
         list-style-type: none;
 
         @include tablet {
             margin-top: 0;
             display: flex;
             flex-direction: row;
+        }
+    }
+
+    &__item {
+        margin-top: 4rem;
+
+        @include tablet {
+            margin-top: unset;
         }
     }
 
